# PlumbusEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  Plumbus.sln  Plumbus.vcxproj  VulkanRenderer.vcxproj  VulkanRenderer.vcxproj.filters  imgui.ini  plumbusEngine.code-workspace  setup_cmake.sh  setup_linux.sh  setup_osx.sh  setup_windows.bat
Engine/: CMakeLists.txt
Engine/Mono/: CMakeLists.txt  PlumbusMono.sln
Engine/Mono/PlumbusEngine/: Application.cs  Camera.cs  GameObject.cs  Input.cs  PlumbusComponent.cs  PlumbusEngineMono.csproj  PlumbusObject.cs  TranslationComponent.cs
Engine/Native/src/: BaseApplication.cpp  BaseApplication.h  Camera.cpp  Camera.h  GameObject.cpp  Helpers.cpp  Scene.cpp  pch.cpp  plumbus.h
Engine/Native/src/components/: GameComponent.h  LightComponent.h  ModelComponent.cpp  ScriptComponent.cpp  TranslationComponent.cpp  TranslationComponent.h
Engine/Native/src/imgui_impl/: ImGuiImpl.cpp
Engine/Native/src/mono_impl/: Class.cpp  MonoManager.cpp  MonoManager.h  ObjectInstance.cpp  ObjectInstance.h  mono_fwd.h
Engine/Native/src/platform/: Input.h  Platform.h
Engine/Native/src/platform/android/: Platform.cpp
Engine/Native/src/platform/linux/: Input.cpp  Platform.cpp
Engine/Native/src/platform/mac/: Input.cpp
Engine/Native/src/platform/windows/: Input.cpp  Platform.h
Engine/Native/src/renderer/vk/: Buffer.cpp  DescriptorPool.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  Device.cpp  Device.h  FrameBuffer.cpp  FrameBuffer.h  Instance.cpp  Material.cpp  MaterialInstance.cpp  Mesh.cpp  Pipeline.h  PipelineCache.h  PipelineLayout.h  Shadow.cpp  ShadowDirectional.cpp  ShadowOmniDirectional.cpp  ShadowOmniDirectional.h  Texture.cpp  VulkanRenderer.cpp  VulkanRenderer.h  Window.cpp  Window.h
Engine/Native/src/renderer/vk/shader_compiler/: ShaderSettings.h
Engine/src/: BaseApplication.cpp  BaseApplication.h  Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Helpers.cpp  Helpers.h  Scene.cpp  Scene.h  plumbus.h
Engine/src/components/: LightComponent.cpp  LightComponent.h  ModelComponent.cpp  ModelComponent.h  ScriptComponent.cpp  ScriptComponent.h  TranslationComponent.cpp  TranslationComponent.h
Engine/src/gui/: GuiManager.cpp  GuiManager.h  GuiTool.cpp  GuiTool.h  ImGuiImpl.cpp  ImGuiImpl.h  Log.cpp
Engine/src/imgui_impl/: ImGuiImpl.cpp  ImGuiImpl.h  Log.cpp  Log.h
Engine/src/mono_impl/: Class.h  MonoManager.cpp  mono_fwd.h
Engine/src/mono_impl/bindings/: mono_GameObject.cpp  mono_GameObject.h  mono_TranslationComponent.h
Engine/src/platform/android/: Platform.h
Engine/src/platform/windows/: BaseApplication.cpp  Platform.h
Engine/src/renderer/base/: Material.h  Mesh.h  Renderer.h  Texture.h  Window.h
Engine/src/renderer/vk/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Device.h  FrameBuffer.cpp  FrameBuffer.h  ImageHelpers.h  Instance.cpp  Instance.h  Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  PipelineCache.cpp  PipelineLayout.cpp  PipelineLayout.h  Shadow.cpp  Shadow.h  ShadowDirectional.cpp  ShadowDirectional.h  ShadowManager.cpp  ShadowManager.h  ShadowOmniDirectional.cpp  ShadowOmniDirectional.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  VulkanRenderer.cpp  (+4 more)
Engine/src/renderer/vk/shader_compiler/: AttributeBuilder.cpp  AttributeBuilder.h  CommonTypes.cpp  CommonTypes.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderParser.cpp  ShaderParser.h  ShaderSegment.cpp  ShaderSegment.h  ShaderSettings.cpp  Tokenizer.cpp  Tokenizer.h
Engine/src/renderer/vk/shader_compiler/builders/: AttributeBuilder.cpp  AttributeBuilder.h  BuilderBase.cpp  BuilderBase.h
Engine/src/renderer/vk/shader_compiler/parsers/: AttributeParser.cpp  AttributeParser.h  ParserBase.cpp  ParserBase.h  UniformParser.cpp  UniformParser.h
EngineDotnet/: EngineDotnet.csproj  Program.cs  build_native.py
Mono/: Mono.sln
PlumbusTester/: CMakeLists.txt  PlumbusTester.sln  PlumbusTester.vcxproj  PlumbusTesterMono.csproj  compile_shaders.bat
PlumbusTester/android/: settings.gradle
PlumbusTester/android/app/: build.gradle
PlumbusTester/android/app/src/androidTest/java/com/plumbusengine/plumbustesterandroid/: ExampleInstrumentedTest.kt
PlumbusTester/android/app/src/main/: AndroidManifest.xml
PlumbusTester/android/app/src/main/assets/shaders/: compile.bat  compile.sh  deferred.frag  deferred.frag.spv  deferred.vert  shader.vert  shader.vert.spv  shadow.frag  shadow.vert  ui.vert  ui.vert.spv  ui_depth.frag
PlumbusTester/android/app/src/main/assets/textures/: stonefloor_color.astc
PlumbusTester/android/app/src/main/res/values/: strings.xml
PlumbusTester/android/app/src/test/java/com/plumbusengine/plumbustesterandroid/: ExampleUnitTest.kt
PlumbusTester/android/gradle/wrapper/: gradle-wrapper.properties
PlumbusTester/assets/scripts/: TestClass.cs  profile_debug.sh  profile_dist.sh
PlumbusTester/assets/shaders/: deferred.frag  shader.frag  shader.frag.spv  shader.vert  shadow.vert.spv  shadow_omni.frag  shadow_omni.vert  ui.vert  ui_cubemap.frag
PlumbusTester/assets/textures/android/: color.astc  normal.astc  stonefloor_normal.astc
PlumbusTester/scripts/: profile_release.sh
PlumbusTester/shaders/: compile.bat  debug.vert.spv  deferred.frag  deferred.frag.spv  lol  shader.vert  shader.vert.spv  shadow.vert  ui.frag.spv
PlumbusTester/src/: Application.cpp  Application.h  PlumbusTester.cpp  TestManager.cpp  TestManager.h  TesterScene.cpp  TesterScene.h
PlumbusTester/src/tests/: Test.h
PlumbusTester/src/tests/DeferredLights/: DeferredLights.cpp  DeferredLights.h
PlumbusTester/src/tests/OmniDirShadows/: OmniDirShadows.cpp  OmniDirShadows.h
PlumbusTester/src/tests/Scripts/: Scripts.cpp  Scripts.h
PlumbusTester/src/tests/Shadows/: Shadows.cpp  Shadows.h
PlumbusTester/src/tests/SponzaScene/: SponzaScene.cpp  SponzaScene.h
lib/: assimp
linuxEnvFiles/: c_cpp_properties.json
setup_scripts/: setup_linux.sh  setup_osx.sh  (+1 more)
(+168 files in other folders)
